--- a/index.html
+++ b/index.html
@@ -12,22 +12,27 @@
 <body>
 <header>
     <h1>BusMall </h1>
-
-
 </header>
-<section id="result"></section>
-<section id="Section-img">
+
+
+<div id="result"></div>
+
+<div id="Section-img">
     
 <img id="left-image" src="" alt="">
 <img id="middle-image" src="" alt="">
 <img id="right-image" src="" alt="">
 
-</section>
+</div>
 <button id="viewResult">View Result</button>
+
+<canvas id="myChart" width="200" height="20"></canvas>
 
     <footer>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="JS/app.js"></script>
 </body>
 </html>
+
